fix validator warnings and align button (#12)

--- a/views/css/sendynewsletter.css
+++ b/views/css/sendynewsletter.css
@@ -30,6 +30,20 @@
   width: 148px;
   border: 1px solid #ccc;
   margin-bottom: 0px !important;
+  vertical-align: middle;
+}
+
+#sendy_newsletter input#sendynewsletter_email_oneseven,
+#sendy_newsletter input#sendynewsletter_name_oneseven {
+  height: 42px;
+  width: 148px;
+  border: 1px solid #ccc;
+  margin-bottom: 0px !important;
+  vertical-align: middle;
+}
+
+#submit_oneseven {
+  height: 42px;
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
